# POA

./: .gitignore  CMakeLists.txt  HOXD70.mtx  LICENSE  README.md  ids.txt  mtDNA.msa  mt_similarity_70_1.msa  mt_similarity_85_1S.msa  mt_similarity_90_1S.msa  run_poa.sh  sars2_similarity_70_1.msa  sars2_similarity_75_1.msa  sars2_similarity_80_1S.msa  test.msa  test1.msa
data/: mtDNA.fasta  sars2_similarity_70_1.fas  test.fa
include/: align.h  graph.h  lchain.h  minimizer.h  minipoa.h  mmpriv.h  parameter.h  result.h
src/: align.cpp  align.h  graph.cpp  graph.h  handle_input.cpp  handle_input.h  lchain.cpp  main.cpp  mem_alloc_utils.cpp  mem_alloc_utils.h  minimizer.cpp  minimizer.h  mmpriv.h  node.h  parameter.h  sequence.cpp  sequence.h
